# mchp_6dof_imu

./: .gitignore  .mcp.json
boards/arm/feather_m4_zephyr_ot/: Kconfig.feather_m4_zephyr_ot  board.yml  feather_m4_zephyr_ot-pinctrl.dtsi  feather_m4_zephyr_ot.dts  feather_m4_zephyr_ot.yaml  feather_m4_zephyr_ot_defconfig
boards/arm/samd21_iot_wg/: Kconfig.samd21_iot_wg  board.yml  samd21_io_wg.yaml  samd21_iot_wg-pinctrl.dtsi  samd21_iot_wg.dts  samd21_iot_wg_defconfig
boards/arm/samd21_iot_wg2/: Kconfig.samd21_iot_wg2  board.yml  samd21_io_wg2.yaml  samd21_iot_wg2.dts  samd21_iot_wg2_defconfig
boards/arm/samd21_iot_wg2/support/: openocd.cfg
boards/arm/samd21_xpro_ot/: Kconfig.samd21_xpro_ot  board.yml  samd21_xpro_ot-pinctrl.dtsi  samd21_xpro_ot.dts  samd21_xpro_ot.yaml  samd21_xpro_ot_defconfig
boards/arm/samd21_xpro_ot/support/: openocd.cfg
mchp_6dof_imu/: CMakeLists.txt  prj.conf
mchp_6dof_imu/boards/overlays/: feather_m4_zephyr_ot.overlay  samd21_iot_wg.overlay  samd21_iot_wg2.overlay  samd21_xpro_ot.overlay  same54_xpro.overlay
mchp_6dof_imu/include/: bubble_level.h  imu_text.h
mchp_6dof_imu/modules/ws2812_common/: CMakeLists.txt
mchp_6dof_imu/src/: bubble_level.c  img_util.c  imu_chart.c  imu_text.c  main.c
mchp_hrm_gfx/: CMakeLists.txt
mchp_hrm_gfx/boards/overlays/: same54_xpro.overlay
mchp_hrm_gfx/dts/bindings/sensor/: afe4404.yaml
mchp_hrm_gfx/include/: afe4404.h  hrm_chart.h  hrm_text.h
mchp_hrm_gfx/src/: afe4404.c  hrm_chart.c  hrm_text.c  main.c
mchp_hw_test/: CMakeLists.txt  prj.conf
mchp_hw_test/dts/bindings/led/: custom,ws2812.yaml
mchp_hw_test/include/: img_util.h
mchp_hw_test/modules/ws2812_common/: Kconfig
mchp_hw_test/modules/ws2812_common/src/: ws2812_common.c
mchp_hw_test/modules/ws2812_common/zephyr/: module.yml
mchp_hw_test/src/: img_util.c  main.c
mchp_range_gfx/: CMakeLists.txt  prj.conf
mchp_range_gfx/boards/overlays/: same54_xpro.overlay
mchp_range_gfx/dts/bindings/sensor/: vl6180x.yaml
mchp_range_gfx/include/: range_chart.h  range_dial.h  range_text.h  vl6180x.h
mchp_range_gfx/src/: main.c  range_chart.c  range_dial.c  range_text.c  vl6180x.c
mchp_round_gfx/: CMakeLists.txt  prj.conf
mchp_round_gfx/boards/overlays/: samd21_iot_wg.overlay  samd21_iot_wg2.overlay  samd21_xpro_ot.overlay  same54_xpro.overlay
mchp_round_gfx/include/: bubble_level.h  imu_chart.h
mchp_round_gfx/src/: bubble_level.c  imu_chart.c  main.c
mchp_weather_gfx/: CMakeLists.txt  prj.conf
mchp_weather_gfx/boards/overlays/: feather_m4_zephyr_ot.overlay  same54_xpro.overlay
mchp_weather_gfx/include/: bme280_chart.h  bme280_text.h
mchp_weather_gfx/modules/ws2812_common/include/: ws2812_common.h
mchp_weather_gfx/modules/ws2812_common/src/: ws2812_common.c
mchp_weather_gfx/src/: bme280_chart.c  bme280_text.c  main.c
